--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 .page-body {
-    background: #f9f9f9;;
     padding-right: 30px;
     padding-left: 30px;
     max-width: 1280px;
@@ -21,7 +20,7 @@
 .bg-content {
   padding-top: 20%;
   padding-left: 10%;
-  color: #f9f9f9;;
+  color: #f9f9f9;
 }
 
 .bg-content a {
@@ -59,13 +58,13 @@ section {
     left: 0px;
     right: 0px;
     width: 100%;
-    background-color: rgba(255,255,255, 0.9);
+    background-color: rgba(249,249,249, 0.9);
   }
 }
 
 .scroll0 {
-  background-color: rgba(255,255,255, 0);
-  color: #f9f9f9;;
+  background-color: rgba(249,249,249, 0);
+  color: #f9f9f9;
 }
 
 .scroll0 a:hover, .bg-content a:hover {
@@ -74,7 +73,7 @@ section {
 }
 
 .scroll0 a {
-  color: #f9f9f9;;
+  color: #f9f9f9;
 }
 
 @media (min-width: 640px) and (max-width: 770px) {
