--- a/index.css
+++ b/index.css
@@ -8,15 +8,6 @@
     border-bottom-right-radius: 3px;
 }
 
-.bg-image {
-  background-image: url("bg-min.png");
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
 .bg-content {
   padding-top: 20%;
   padding-left: 10%;
@@ -48,6 +39,27 @@ section {
   .page-body{
     position: relative;
   }
+  .scroll0 {
+    background-color: rgba(249,249,249, 0);
+    color: #f9f9f9;
+  }
+
+  .scroll0 a:hover, .bg-content a:hover {
+    color: #f9f9f9;
+    font-weight: bold;
+  }
+
+  .scroll0 a {
+    color: #f9f9f9;
+  }
+  .bg-image {
+    background-image: url("bg-min.png");
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
   nav {
     position: fixed;
     max-width: 1280px;
@@ -62,20 +74,6 @@ section {
   }
 }
 
-.scroll0 {
-  background-color: rgba(249,249,249, 0);
-  color: #f9f9f9;
-}
-
-.scroll0 a:hover, .bg-content a:hover {
-  color: #f9f9f9;
-  font-weight: bold;
-}
-
-.scroll0 a {
-  color: #f9f9f9;
-}
-
 @media (min-width: 640px) and (max-width: 770px) {
   nav {
     height: 100px;
@@ -85,6 +83,12 @@ section {
 @media (min-width: 771px) {
   nav {
     height: 60px;
+  }
+}
+
+@media (max-width: 639px) {
+  #cover {
+    display: none;
   }
 }
 
